--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <div class="jumbotron">
   <h1>Welcome to the To Do! app</h1>
-  <p>A great place to create and manage your to do lists. Each task can have a due date, a priority and can be assigned to yourself or another user. More text to come here. More text to come here.</p>
+  <p>A great place to create and manage your to do lists.</p>
+  <p>You can set up your own private easy-to-manage to do list. You can also create or join groups so that you can easily share lists and assign tasks to other users within a group.</p>
   <p>Log in above or register to get started.</p>
   <p><%= link_to "Register", register_path, class: "btn btn-primary btn-lg" %></p>
 </div>
