--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -29,13 +29,44 @@
       </li>
       <li class="dropdown">
         <%= link_to "", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
+          Groups <span class="caret"></span>
+        <% end %>
+        <ul class="dropdown-menu" role="menu">
+          <li><%= link_to "My groups", user_path(current_user) %></li>
+          <li class="divider"></li>
+          <li>
+            <%= link_to new_group_path do %>
+              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp New group
+            <% end %>
+          </li>
+          <li>
+            <%= link_to join_groups_path do %>
+              <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp Join group
+            <% end %>
+          </li>
+        </ul>
+      </li>
+      <li class="dropdown">
+        <%= link_to "", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
           <%= current_user.username %> <span class="caret"></span>
         <% end %>
         <ul class="dropdown-menu" role="menu">
-          <li><%= link_to "View profile", user_path(current_user) %></li>
-          <li><%= link_to "Edit profile", edit_user_path(current_user) %></li>
+          <li>
+            <%= link_to user_path(current_user) do %>
+              <span class="glyphicon glyphicon-user" aria-hidden="true"></span>&nbsp View profile
+            <% end %>
+          </li>
+          <li>
+            <%= link_to edit_user_path(current_user) do %>
+              <span class="glyphicon glyphicon-edit" aria-hidden="true"></span>&nbsp Edit profile
+            <% end %>
+          </li>
           <li class="divider"></li>
-          <li><%= link_to "Log out", logout_path %></li>
+          <li>
+            <%= link_to logout_path do %>
+              <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span>&nbsp Log out
+            <% end %>
+          </li>
         </ul>
       </li>
     </ul>
