--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -1,14 +1,24 @@
+<% show_due_date ||= false %>
+
 <li class="list-group-item">
   <% if task.completed %>
     <span class="glyphicon glyphicon-check"></span>
   <% else %>
     <%= link_to completed_task_path(task, task: { completed: true } ), method: "patch", remote: true do %>
-      <span id="task_<%= task.id %>_completed" class="glyphicon glyphicon-unchecked"></span>
+      <span id="task_<%= task.slug %>_completed" class="glyphicon glyphicon-unchecked"></span>
     <% end %>
   <% end %>
   &nbsp&nbsp
-  <%= link_to task.title, task_path(task) %>&nbsp
-  <span class="text-muted"><em> assigned to <%= task.assignee.username %></em></span>
-  <span class="badge"><%= task.priority.capitalize %></span>
+  <%= link_to task.title, task_path(task) %>
+  <% if show_due_date %>
+    &nbsp due on <%= format_date(task.due_date) %>
+  <% end %>
+  <% if @show_assignee %>
+    <span class="text-muted"><em>&nbsp assigned to <%= task.assignee.username %></em></span>
+  <% end %>
+  <span class="badge" style="background-color: #5bc0de"><%= task.priority.capitalize %></span>
+  <% unless task.group.nil? %>
+    <%= link_to task.group.name, group_path(task.group), class: "badge" %>
+  <% end %>
 </li>
 
