--- a/app/views/tasks/mark_completed.js.erb
+++ b/app/views/tasks/mark_completed.js.erb
@@ -1,3 +1,3 @@
-$('#task_<%= @task.id %>_completed').addClass('glyphicon-check');
-$('#task_<%= @task.id %>_completed').removeClass('glyphicon-unchecked');
-$('#task_<%= @task.id %>_completed_field').html('Yes');
+$('#task_<%= @task.slug %>_completed').addClass('glyphicon-check');
+$('#task_<%= @task.slug %>_completed').removeClass('glyphicon-unchecked');
+$('#task_<%= @task.slug %>_completed_field').html('Yes');
