--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,20 +1,32 @@
-<h1>Group: <%= @group.name %></h1>
+<h1>
+  Group: <%= @group.name %>
+  <button class="btn btn-success pull-right" type="button" data-toggle="collapse" data-target="#collapseGroupDetails" aria-expanded="false" aria-controls="collapseGroupDetails">
+    Show / hide group details
+  </button>
+</h1>
 <hr/>
-<div class="well">
-  <dl class="dl-horizontal">
-    <dt>Name</dt>
-    <dd><%= @group.name %></dd>
-    <br/>
-    <dt>Created by</dt>
-    <dd><%= @group.creator.username %></dd>
-    <br/>
-    <dt><%= "Member".pluralize(@group.users.count) %></dt>
-    <% @group.users.order(:username).each do |user| %>
-      <dd><%= user.username %></dd>
-    <% end %>
-  </dl>
+
+<div class="collapse in" id="collapseGroupDetails">
+  <div class="well">
+    <dl class="dl-horizontal">
+      <dt>Name</dt>
+      <dd><%= @group.name %></dd>
+      <br/>
+      <dt>Created by</dt>
+      <dd><%= @group.creator.username %></dd>
+      <br/>
+      <dt><%= "Member".pluralize(@group.users.count) %></dt>
+      <% @group.users.order(:username).each do |user| %>
+        <dd><%= user.username %></dd>
+      <% end %>
+      <% if current_user == @group.creator %>
+        <br/>
+        <dd><%=link_to "Edit group", edit_group_path(@group), class: "btn btn-primary" %></dd>
+      <% end %>
+    </dl>
+  </div>
 </div>
 
-<% if current_user == @group.creator %>
-  <%=link_to "Edit group", edit_group_path(@group), class: "btn btn-primary" %>
-<% end %>
+<br/>
+
+<%= render 'tasks/task_tabs' %>
