--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -6,24 +6,32 @@
     <span class="icon-bar"></span>
     <span class="icon-bar"></span>
   </button>
-  <%= link_to 'To Do!', logged_in? ? outstanding_tasks_path : root_path, class: "navbar-brand" %>
+  <%= link_to 'To Do!', logged_in? ? tasks_path : root_path, class: "navbar-brand" %>
 </div>
 
 <!-- Collect the nav links, forms, and other content for toggling -->
 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
   <% if logged_in? %>
     <ul class="nav navbar-nav">
-      <li><%= link_to "New task", new_task_path %></li>
+      <li>
+        <%= link_to new_task_path do %>
+          <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>&nbsp New task
+        <% end %>
+      </li>
       <li class="dropdown">
         <%= link_to "", class: "dropdown-toggle", "data-toggle" => "dropdown" do %>
           Tasks <span class="caret"></span>
         <% end %>
         <ul class="dropdown-menu" role="menu">
-          <li><%= link_to "Created by #{current_user.username}", created_tasks_path %></li>
-          <li><%= link_to "Assigned to #{current_user.username}", assigned_tasks_path %></li>
+          <li class="dropdown-header"><%= current_user.username %>'s lists</li>
+          <li><%= link_to "#{current_user.username}'s personal list", personal_tasks_path %></li>
+          <li><%= link_to "All tasks assigned to #{current_user.username}", assigned_tasks_path %></li>
           <li class="divider"></li>
-          <li><%= link_to "All outstanding tasks", outstanding_tasks_path %></li>
-          <li><%= link_to "All completed tasks", completed_tasks_path %></li>
+          <li class="dropdown-header">Group lists</li>
+          <% current_user.groups.order(:name).each do |group| %>
+            <li><%= link_to group.name, group_path(group) %></li>
+          <% end %>
+          <li class="divider"></li>
           <li><%= link_to "All tasks", tasks_path %></li>
         </ul>
       </li>
@@ -32,7 +40,7 @@
           Groups <span class="caret"></span>
         <% end %>
         <ul class="dropdown-menu" role="menu">
-          <li><%= link_to "My groups", user_path(current_user) %></li>
+          <li><%= link_to "My groups", groups_path %></li>
           <li class="divider"></li>
           <li>
             <%= link_to new_group_path do %>
@@ -76,10 +84,16 @@
   <% else %>
     <%= form_tag '/login', class: "navbar-form navbar-right" do %>
       <div class="form-group">
-        <%= text_field_tag :username, params[:username] || "Username", class: "form-control" %>
+        <div class="input-group">
+          <div class="input-group-addon"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></div>
+          <%= text_field_tag :username, nil, class: "form-control", placeholder: "Username" %>
+        </div>
       </div>
       <div class="form-group">
-        <%= password_field_tag :password, params[:password] || "Password", class: "form-control" %>
+        <div class="input-group">
+          <div class="input-group-addon"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></div>
+          <%= password_field_tag :password, nil, class: "form-control", placeholder: "Password" %>
+        </div>
       </div>
       <div class="form-group">
         <%= submit_tag "Log in", class: "btn btn-primary" %>
