--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,15 +10,4 @@
   </dl>
 </div>
 
-<ul class="list-group">
-  <li class="list-group-item list-group-item active">Groups</li>
-  <% @groups.order(:name).each do |group| %>
-    <li class="list-group-item">
-      <%= link_to group.name, group_path(group) %>&nbsp
-      <span class="text-muted"><em> created by <%= group.creator.username %></em></span>
-      <% if current_user == group.creator %>
-        <span class="pull-right">[<%= link_to "edit group", edit_group_path(group) %>]</span>
-      <% end %>
-    </li>
-  <% end %>
-</ul>
+<%= render 'groups/group_list' %>
