--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -1,6 +1,8 @@
-<ul class="list-group">
-  <li class="list-group-item list-group-item-success">Tasks by due date</li>
-  <% tasks.reverse.each do |task| %>
-    <%= render 'tasks/task', task: task, show_due_date: true %>
-  <% end %>
-</ul>
+<% unless tasks.empty? %>
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-success">Tasks by due date</li>
+    <% tasks.reverse.each do |task| %>
+      <%= render 'tasks/task', task: task, show_due_date: true %>
+    <% end %>
+  </ul>
+<% end %>
